mwlib/_expander.cc
/* Generated by re2c 1.3 */
#line 1 "_expander.re"
// -*- mode: c++ -*-
// Copyright (c) 2007-2008 PediaPress GmbH
// See README.txt for additional licensing information.

#include <Python.h>

#include <iostream>
#include <assert.h>
#include <vector>

using namespace std;

#define RET(x) {found(x); return x;}

struct Token
{
	int type;
	int start;
	int len;
};


class MacroScanner
{
public:

	MacroScanner(Py_UNICODE *_start, Py_UNICODE *_end) {
		source = start = _start;
		end = _end;
		cursor = start;
	}

	int found(int val) {
		if (val==5 && tokens.size()) {
			Token &previous_token (tokens[tokens.size()-1]);
			if (previous_token.type==val) {
				previous_token.len += cursor-start;
				return tokens.size()-1;
			}
		}
		Token t;
		t.type = val;
		t.start = (start-source);
		t.len = cursor-start;			
		tokens.push_back(t);
		return tokens.size()-1;
	}

	inline int scan();

	Py_UNICODE *source;

	Py_UNICODE *start;
	Py_UNICODE *cursor;
	Py_UNICODE *end;
	vector<Token> tokens;
};


int MacroScanner::scan()
{

def:

	start=cursor;
	
	Py_UNICODE *marker=cursor;

	Py_UNICODE *save_cursor = cursor;


#define YYCTYPE         Py_UNICODE
#define YYCURSOR        cursor
#define YYMARKER	marker
#define YYLIMIT   (end)
// #define YYFILL(n) return 0;

#line 80 "_expander.re"





#line 87 "_expander.cc"
{
	YYCTYPE yych;
	yych = *YYCURSOR;
	if (yych <= '\\') {
		if (yych <= '<') {
			if (yych <= 0x0000) goto yy2;
			if (yych <= ';') goto yy4;
			goto yy6;
		} else {
			if (yych == '[') goto yy7;
			goto yy4;
		}
	} else {
		if (yych <= '{') {
			if (yych <= ']') goto yy8;
			if (yych <= 'z') goto yy4;
			goto yy9;
		} else {
			if (yych <= '|') goto yy10;
			if (yych <= '}') goto yy12;
			goto yy4;
		}
	}
yy2:
	++YYCURSOR;
#line 98 "_expander.re"
	{RET(0);}
#line 115 "_expander.cc"
yy4:
	++YYCURSOR;
yy5:
#line 99 "_expander.re"
	{RET(5);}
#line 121 "_expander.cc"
yy6:
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych <= 'M') {
		if (yych <= 'G') {
			if (yych == '!') goto yy13;
			if (yych <= 'F') goto yy5;
			goto yy15;
		} else {
			if (yych == 'I') goto yy16;
			if (yych <= 'L') goto yy5;
			goto yy17;
		}
	} else {
		if (yych <= 'h') {
			if (yych <= 'N') goto yy18;
			if (yych == 'g') goto yy15;
			goto yy5;
		} else {
			if (yych <= 'l') {
				if (yych <= 'i') goto yy16;
				goto yy5;
			} else {
				if (yych <= 'm') goto yy17;
				if (yych <= 'n') goto yy18;
				goto yy5;
			}
		}
	}
yy7:
	yych = *++YYCURSOR;
	if (yych == '[') goto yy19;
	goto yy5;
yy8:
	yych = *++YYCURSOR;
	if (yych == ']') goto yy19;
	goto yy5;
yy9:
	yych = *++YYCURSOR;
	if (yych == '{') goto yy21;
	goto yy5;
yy10:
	++YYCURSOR;
#line 88 "_expander.re"
	{RET(6);}
#line 166 "_expander.cc"
yy12:
	yych = *++YYCURSOR;
	if (yych == '}') goto yy24;
	goto yy5;
yy13:
	yych = *++YYCURSOR;
	if (yych == '-') goto yy27;
yy14:
	YYCURSOR = YYMARKER;
	goto yy5;
yy15:
	yych = *++YYCURSOR;
	if (yych == 'A') goto yy28;
	if (yych == 'a') goto yy28;
	goto yy14;
yy16:
	yych = *++YYCURSOR;
	if (yych == 'M') goto yy29;
	if (yych == 'm') goto yy29;
	goto yy14;
yy17:
	yych = *++YYCURSOR;
	if (yych == 'A') goto yy30;
	if (yych == 'a') goto yy30;
	goto yy14;
yy18:
	yych = *++YYCURSOR;
	if (yych == 'O') goto yy31;
	if (yych == 'o') goto yy31;
	goto yy14;
yy19:
	++YYCURSOR;
#line 87 "_expander.re"
	{RET(3);}
#line 201 "_expander.cc"
yy21:
	yych = *++YYCURSOR;
	if (yych == '{') goto yy21;
#line 85 "_expander.re"
	{RET(1);}
#line 207 "_expander.cc"
yy24:
	yych = *++YYCURSOR;
	if (yych == '}') goto yy24;
#line 86 "_expander.re"
	{RET(2);}
#line 213 "_expander.cc"
yy27:
	yych = *++YYCURSOR;
	if (yych == '-') goto yy32;
	goto yy14;
yy28:
	yych = *++YYCURSOR;
	if (yych == 'L') goto yy33;
	if (yych == 'l') goto yy33;
	goto yy14;
yy29:
	yych = *++YYCURSOR;
	if (yych == 'A') goto yy34;
	if (yych == 'a') goto yy34;
	goto yy14;
yy30:
	yych = *++YYCURSOR;
	if (yych == 'T') goto yy35;
	if (yych == 't') goto yy35;
	goto yy14;
yy31:
	yych = *++YYCURSOR;
	if (yych <= 'W') {
		if (yych == 'I') goto yy36;
		if (yych <= 'V') goto yy14;
		goto yy37;
	} else {
		if (yych <= 'i') {
			if (yych <= 'h') goto yy14;
			goto yy36;
		} else {
			if (yych == 'w') goto yy37;
			goto yy14;
		}
	}
yy32:
	yych = *++YYCURSOR;
	if (yych == '[') goto yy38;
	goto yy14;
yy33:
	yych = *++YYCURSOR;
	if (yych == 'L') goto yy39;
	if (yych == 'l') goto yy39;
	goto yy14;
yy34:
	yych = *++YYCURSOR;
	if (yych == 'G') goto yy40;
	if (yych == 'g') goto yy40;
	goto yy14;
yy35:
	yych = *++YYCURSOR;
	if (yych == 'H') goto yy41;
	if (yych == 'h') goto yy41;
	goto yy14;
yy36:
	yych = *++YYCURSOR;
	if (yych == 'N') goto yy43;
	if (yych == 'n') goto yy43;
	goto yy14;
yy37:
	yych = *++YYCURSOR;
	if (yych == 'I') goto yy44;
	if (yych == 'i') goto yy44;
	goto yy14;
yy38:
	yych = *++YYCURSOR;
	if (yych == '^') goto yy45;
	goto yy14;
yy39:
	yych = *++YYCURSOR;
	if (yych == 'E') goto yy46;
	if (yych == 'e') goto yy46;
	goto yy14;
yy40:
	yych = *++YYCURSOR;
	if (yych == 'E') goto yy47;
	if (yych == 'e') goto yy47;
	goto yy14;
yy41:
	yych = *++YYCURSOR;
	if (yych <= '<') {
		if (yych <= 0x0000) goto yy14;
		if (yych <= ';') goto yy41;
		goto yy14;
	} else {
		if (yych == '>') goto yy48;
		goto yy41;
	}
yy43:
	yych = *++YYCURSOR;
	if (yych == 'C') goto yy50;
	if (yych == 'c') goto yy50;
	goto yy14;
yy44:
	yych = *++YYCURSOR;
	if (yych == 'K') goto yy51;
	if (yych == 'k') goto yy51;
	goto yy14;
yy45:
	yych = *++YYCURSOR;
	if (yych <= 0x0000) goto yy52;
	goto yy14;
yy46:
	yych = *++YYCURSOR;
	if (yych == 'R') goto yy53;
	if (yych == 'r') goto yy53;
	goto yy14;
yy47:
	yych = *++YYCURSOR;
	if (yych == 'M') goto yy54;
	if (yych == 'm') goto yy54;
	goto yy14;
yy48:
	++YYCURSOR;
#line 93 "_expander.re"
	{goto math;}
#line 329 "_expander.cc"
yy50:
	yych = *++YYCURSOR;
	if (yych == 'L') goto yy55;
	if (yych == 'l') goto yy55;
	goto yy14;
yy51:
	yych = *++YYCURSOR;
	if (yych == 'I') goto yy56;
	if (yych == 'i') goto yy56;
	goto yy14;
yy52:
	yych = *++YYCURSOR;
	if (yych == '<') goto yy57;
	goto yy14;
yy53:
	yych = *++YYCURSOR;
	if (yych == 'Y') goto yy58;
	if (yych == 'y') goto yy58;
	goto yy14;
yy54:
	yych = *++YYCURSOR;
	if (yych == 'A') goto yy60;
	if (yych == 'a') goto yy60;
	goto yy14;
yy55:
	yych = *++YYCURSOR;
	if (yych == 'U') goto yy61;
	if (yych == 'u') goto yy61;
	goto yy14;
yy56:
	yych = *++YYCURSOR;
	if (yych == '>') goto yy62;
	goto yy14;
yy57:
	yych = *++YYCURSOR;
	if (yych == '>') goto yy64;
	goto yy14;
yy58:
	yych = *++YYCURSOR;
	if (yych <= '<') {
		if (yych <= 0x0000) goto yy14;
		if (yych <= ';') goto yy58;
		goto yy14;
	} else {
		if (yych == '>') goto yy65;
		goto yy58;
	}
yy60:
	yych = *++YYCURSOR;
	if (yych == 'P') goto yy67;
	if (yych == 'p') goto yy67;
	goto yy14;
yy61:
	yych = *++YYCURSOR;
	if (yych == 'D') goto yy69;
	if (yych == 'd') goto yy69;
	goto yy14;
yy62:
	++YYCURSOR;
#line 91 "_expander.re"
	{goto nowiki;}
#line 391 "_expander.cc"
yy64:
	yych = *++YYCURSOR;
	if (yych == ']') goto yy70;
	goto yy14;
yy65:
	++YYCURSOR;
#line 94 "_expander.re"
	{goto gallery;}
#line 400 "_expander.cc"
yy67:
	yych = *++YYCURSOR;
	if (yych <= '<') {
		if (yych <= 0x0000) goto yy14;
		if (yych <= ';') goto yy67;
		goto yy14;
	} else {
		if (yych == '>') goto yy71;
		goto yy67;
	}
yy69:
	yych = *++YYCURSOR;
	if (yych == 'E') goto yy73;
	if (yych == 'e') goto yy73;
	goto yy14;
yy70:
	yych = *++YYCURSOR;
	if (yych == '*') goto yy74;
	goto yy14;
yy71:
	++YYCURSOR;
#line 92 "_expander.re"
	{goto imagemap;}
#line 424 "_expander.cc"
yy73:
	yych = *++YYCURSOR;
	if (yych == '>') goto yy75;
	goto yy14;
yy74:
	yych = *++YYCURSOR;
	if (yych == '-') goto yy77;
	goto yy14;
yy75:
	++YYCURSOR;
#line 90 "_expander.re"
	{goto noinclude;}
#line 437 "_expander.cc"
yy77:
	yych = *++YYCURSOR;
	if (yych != '-') goto yy14;
	yych = *++YYCURSOR;
	if (yych != '>') goto yy14;
	++YYCURSOR;
#line 96 "_expander.re"
	{RET(5);}
#line 446 "_expander.cc"
}
#line 101 "_expander.re"




noinclude:

#line 455 "_expander.cc"
{
	YYCTYPE yych;
	yych = *YYCURSOR;
	if (yych <= 0x0000) goto yy83;
	if (yych == '<') goto yy87;
	goto yy85;
yy83:
	++YYCURSOR;
#line 109 "_expander.re"
	{cursor=start+11; RET(5);}
#line 466 "_expander.cc"
yy85:
	++YYCURSOR;
yy86:
#line 108 "_expander.re"
	{goto noinclude;}
#line 472 "_expander.cc"
yy87:
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych != '/') goto yy86;
	yych = *++YYCURSOR;
	if (yych == 'N') goto yy90;
	if (yych == 'n') goto yy90;
yy89:
	YYCURSOR = YYMARKER;
	goto yy86;
yy90:
	yych = *++YYCURSOR;
	if (yych == 'O') goto yy91;
	if (yych != 'o') goto yy89;
yy91:
	yych = *++YYCURSOR;
	if (yych == 'I') goto yy92;
	if (yych != 'i') goto yy89;
yy92:
	yych = *++YYCURSOR;
	if (yych == 'N') goto yy93;
	if (yych != 'n') goto yy89;
yy93:
	yych = *++YYCURSOR;
	if (yych == 'C') goto yy94;
	if (yych != 'c') goto yy89;
yy94:
	yych = *++YYCURSOR;
	if (yych == 'L') goto yy95;
	if (yych != 'l') goto yy89;
yy95:
	yych = *++YYCURSOR;
	if (yych == 'U') goto yy96;
	if (yych != 'u') goto yy89;
yy96:
	yych = *++YYCURSOR;
	if (yych == 'D') goto yy97;
	if (yych != 'd') goto yy89;
yy97:
	yych = *++YYCURSOR;
	if (yych == 'E') goto yy98;
	if (yych != 'e') goto yy89;
yy98:
	yych = *++YYCURSOR;
	if (yych != '>') goto yy89;
	++YYCURSOR;
#line 107 "_expander.re"
	{goto def;}
#line 520 "_expander.cc"
}
#line 110 "_expander.re"


nowiki:

#line 527 "_expander.cc"
{
	YYCTYPE yych;
	yych = *YYCURSOR;
	if (yych <= 0x0000) goto yy103;
	if (yych == '<') goto yy107;
	goto yy105;
yy103:
	++YYCURSOR;
#line 116 "_expander.re"
	{RET(0);}
#line 538 "_expander.cc"
yy105:
	++YYCURSOR;
yy106:
#line 115 "_expander.re"
	{goto nowiki;}
#line 544 "_expander.cc"
yy107:
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych != '/') goto yy106;
	yych = *++YYCURSOR;
	if (yych == 'N') goto yy110;
	if (yych == 'n') goto yy110;
yy109:
	YYCURSOR = YYMARKER;
	goto yy106;
yy110:
	yych = *++YYCURSOR;
	if (yych == 'O') goto yy111;
	if (yych != 'o') goto yy109;
yy111:
	yych = *++YYCURSOR;
	if (yych == 'W') goto yy112;
	if (yych != 'w') goto yy109;
yy112:
	yych = *++YYCURSOR;
	if (yych == 'I') goto yy113;
	if (yych != 'i') goto yy109;
yy113:
	yych = *++YYCURSOR;
	if (yych == 'K') goto yy114;
	if (yych != 'k') goto yy109;
yy114:
	yych = *++YYCURSOR;
	if (yych == 'I') goto yy115;
	if (yych != 'i') goto yy109;
yy115:
	yych = *++YYCURSOR;
	if (yych != '>') goto yy109;
	++YYCURSOR;
#line 114 "_expander.re"
	{RET(5);}
#line 580 "_expander.cc"
}
#line 117 "_expander.re"


math:

#line 587 "_expander.cc"
{
	YYCTYPE yych;
	yych = *YYCURSOR;
	if (yych <= 0x0000) goto yy120;
	if (yych == '<') goto yy124;
	goto yy122;
yy120:
	++YYCURSOR;
#line 123 "_expander.re"
	{RET(0);}
#line 598 "_expander.cc"
yy122:
	++YYCURSOR;
yy123:
#line 122 "_expander.re"
	{goto math;}
#line 604 "_expander.cc"
yy124:
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych != '/') goto yy123;
	yych = *++YYCURSOR;
	if (yych == 'M') goto yy127;
	if (yych == 'm') goto yy127;
yy126:
	YYCURSOR = YYMARKER;
	goto yy123;
yy127:
	yych = *++YYCURSOR;
	if (yych == 'A') goto yy128;
	if (yych != 'a') goto yy126;
yy128:
	yych = *++YYCURSOR;
	if (yych == 'T') goto yy129;
	if (yych != 't') goto yy126;
yy129:
	yych = *++YYCURSOR;
	if (yych == 'H') goto yy130;
	if (yych != 'h') goto yy126;
yy130:
	yych = *++YYCURSOR;
	if (yych != '>') goto yy126;
	++YYCURSOR;
#line 121 "_expander.re"
	{RET(5);}
#line 632 "_expander.cc"
}
#line 124 "_expander.re"


gallery:

#line 639 "_expander.cc"
{
	YYCTYPE yych;
	yych = *YYCURSOR;
	if (yych <= 0x0000) goto yy135;
	if (yych == '<') goto yy139;
	goto yy137;
yy135:
	++YYCURSOR;
#line 130 "_expander.re"
	{RET(0);}
#line 650 "_expander.cc"
yy137:
	++YYCURSOR;
yy138:
#line 129 "_expander.re"
	{goto gallery;}
#line 656 "_expander.cc"
yy139:
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych != '/') goto yy138;
	yych = *++YYCURSOR;
	if (yych == 'G') goto yy142;
	if (yych == 'g') goto yy142;
yy141:
	YYCURSOR = YYMARKER;
	goto yy138;
yy142:
	yych = *++YYCURSOR;
	if (yych == 'A') goto yy143;
	if (yych != 'a') goto yy141;
yy143:
	yych = *++YYCURSOR;
	if (yych == 'L') goto yy144;
	if (yych != 'l') goto yy141;
yy144:
	yych = *++YYCURSOR;
	if (yych == 'L') goto yy145;
	if (yych != 'l') goto yy141;
yy145:
	yych = *++YYCURSOR;
	if (yych == 'E') goto yy146;
	if (yych != 'e') goto yy141;
yy146:
	yych = *++YYCURSOR;
	if (yych == 'R') goto yy147;
	if (yych != 'r') goto yy141;
yy147:
	yych = *++YYCURSOR;
	if (yych == 'Y') goto yy148;
	if (yych != 'y') goto yy141;
yy148:
	yych = *++YYCURSOR;
	if (yych != '>') goto yy141;
	++YYCURSOR;
#line 128 "_expander.re"
	{RET(5);}
#line 696 "_expander.cc"
}
#line 131 "_expander.re"


imagemap:

#line 703 "_expander.cc"
{
	YYCTYPE yych;
	yych = *YYCURSOR;
	if (yych <= 0x0000) goto yy153;
	if (yych == '<') goto yy157;
	goto yy155;
yy153:
	++YYCURSOR;
#line 137 "_expander.re"
	{RET(0);}
#line 714 "_expander.cc"
yy155:
	++YYCURSOR;
yy156:
#line 136 "_expander.re"
	{goto imagemap;}
#line 720 "_expander.cc"
yy157:
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych != '/') goto yy156;
	yych = *++YYCURSOR;
	if (yych == 'I') goto yy160;
	if (yych == 'i') goto yy160;
yy159:
	YYCURSOR = YYMARKER;
	goto yy156;
yy160:
	yych = *++YYCURSOR;
	if (yych == 'M') goto yy161;
	if (yych != 'm') goto yy159;
yy161:
	yych = *++YYCURSOR;
	if (yych == 'A') goto yy162;
	if (yych != 'a') goto yy159;
yy162:
	yych = *++YYCURSOR;
	if (yych == 'G') goto yy163;
	if (yych != 'g') goto yy159;
yy163:
	yych = *++YYCURSOR;
	if (yych == 'E') goto yy164;
	if (yych != 'e') goto yy159;
yy164:
	yych = *++YYCURSOR;
	if (yych == 'M') goto yy165;
	if (yych != 'm') goto yy159;
yy165:
	yych = *++YYCURSOR;
	if (yych == 'A') goto yy166;
	if (yych != 'a') goto yy159;
yy166:
	yych = *++YYCURSOR;
	if (yych == 'P') goto yy167;
	if (yych != 'p') goto yy159;
yy167:
	yych = *++YYCURSOR;
	if (yych != '>') goto yy159;
	++YYCURSOR;
#line 135 "_expander.re"
	{RET(5);}
#line 764 "_expander.cc"
}
#line 138 "_expander.re"


pre:

#line 771 "_expander.cc"
{
	YYCTYPE yych;
	yych = *YYCURSOR;
	if (yych <= 0x0000) goto yy172;
	if (yych == '<') goto yy176;
	goto yy174;
yy172:
	++YYCURSOR;
#line 144 "_expander.re"
	{RET(0);}
#line 782 "_expander.cc"
yy174:
	++YYCURSOR;
yy175:
#line 143 "_expander.re"
	{goto pre;}
#line 788 "_expander.cc"
yy176:
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych != '/') goto yy175;
	yych = *++YYCURSOR;
	if (yych == 'P') goto yy179;
	if (yych == 'p') goto yy179;
yy178:
	YYCURSOR = YYMARKER;
	goto yy175;
yy179:
	yych = *++YYCURSOR;
	if (yych == 'R') goto yy180;
	if (yych != 'r') goto yy178;
yy180:
	yych = *++YYCURSOR;
	if (yych == 'E') goto yy181;
	if (yych != 'e') goto yy178;
yy181:
	yych = *++YYCURSOR;
	if (yych != '>') goto yy178;
	++YYCURSOR;
#line 142 "_expander.re"
	{RET(5);}
#line 812 "_expander.cc"
}
#line 145 "_expander.re"

	
}


PyObject *py_scan(PyObject *self, PyObject *args) 
{
	PyObject *arg1;
	if (!PyArg_ParseTuple(args, "O:_expander.scan", &arg1)) {
		return 0;
	}
	PyASCIIObject *unistr = (PyASCIIObject*)PyUnicode_FromObject(arg1);
	if (unistr == NULL) {
		PyErr_SetString(PyExc_TypeError,
				"parameter cannot be converted to unicode in _expander.scan");
		return 0;
	}

	Py_UNICODE *start = unistr->wstr;
	Py_UNICODE *end = start+unistr->length;
	

	MacroScanner scanner (start, end);
	Py_BEGIN_ALLOW_THREADS
	while (scanner.scan()) {
	}
	Py_END_ALLOW_THREADS
	Py_XDECREF(unistr);
	
	// return PyList_New(0); // uncomment to see timings for scanning

	int size = scanner.tokens.size();
	PyObject *result = PyList_New(size);
	if (!result) {
		return 0;
	}
	
	for (int i=0; i<size; i++) {
		Token t = scanner.tokens[i];
		PyList_SET_ITEM(result, i, Py_BuildValue("iii", t.type, t.start, t.len));
	}
	
	return result;
}



static PyMethodDef module_functions[] = {
	{"scan", (PyCFunction)py_scan, METH_VARARGS, "scan(text)"},
	{0, 0},
};


/*
extern "C" {
	DL_EXPORT(void) init_expander();
}

DL_EXPORT(void) init_expander()
{
	*PyObject *m = Py_InitModule("_expander", module_functions);
}
*/
